initial commit for fixes to get new wx2.6.0 guiplugins working again. the graphical plugins are still busted but will work shortly. to get ones plugins working changes have to be made to your vcproj file. I will be checking in changes to get the plugins to work on unix on sat or sun of this week.

--- a/VEOpen/VESOpen/VESOpen.vcproj
+++ b/VEOpen/VESOpen/VESOpen.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="VESOpen"
+	Name="VEOpen"
 	ProjectGUID="{BCEA6B36-558C-4D70-8C43-D69E5EB68AF7}"
 	Keyword="Win32Proj">
 	<Platforms>
