--- a/VE_CE/WinServer.vcproj
+++ b/VE_CE/WinServer.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="WinServer"
+	Name="VE_CE"
 	ProjectGUID="{E96F21F0-C5EF-43F0-9643-154D3BB96118}"
 	SccProjectName=""
 	SccLocalPath="">
