--- a/VE_Installer/Makefile
+++ b/VE_Installer/Makefile
@@ -33,6 +33,7 @@
 DIRS= ${VE_SUITE_HOME}/VE_Builder/Translator \
       ${VE_SUITE_HOME}/VE_Builder/Preprocessor \
       ${VE_SUITE_HOME}/VE_Builder/Utilities \
+      ${VE_SUITE_HOME}/VE_Builder/vtkTo3DTexture/tcGUI \
       ${VE_SUITE_HOME}/VEOpen \
       ${VE_SUITE_HOME}/VE_CE \
       ${VE_SUITE_HOME}/VE_Conductor \
@@ -48,6 +49,7 @@ all: $(DIRS)
 
 ${VE_SUITE_HOME}/VE_Builder/Translator \
 ${VE_SUITE_HOME}/VE_Builder/Preprocessor \
+${VE_SUITE_HOME}/VE_Builder/vtkTo3DTexture/tcGUI \
 ${VE_SUITE_HOME}/VE_CE \
 ${VE_SUITE_HOME}/VE_Conductor \
 ${VE_SUITE_HOME}/VE_Xplorer::
