changes to read new and old vtk file formats...

--- a/VE_Builder/Utilities/mk/convertVTK2Binary/Makefile
+++ b/VE_Builder/Utilities/mk/convertVTK2Binary/Makefile
@@ -11,6 +11,7 @@ srcdir= ../../
 SRCS= \
    fileIO.cxx \
    readWriteVtkThings.cxx \
+   cfdVTKFileHandler.cxx \
    convertVTK2Binary.cpp 
 
 # Specify the OS-dependent directory name for object files and depends
