--- a/VE_Builder/Utilities/mk/makeVtkSurface/Makefile
+++ b/VE_Builder/Utilities/mk/makeVtkSurface/Makefile
@@ -12,6 +12,7 @@ SRCS=\
    makeVtkSurface.cpp \
    fileIO.cxx \
    readWriteVtkThings.cxx \
+   cfdVTKFileHandler.cxx \
    setScalarAndVector.cpp \
    viewCells.cpp \
    cfdGrid2Surface.cpp
