--- a/VE_Builder/Utilities/mk/meshViewer/Makefile
+++ b/VE_Builder/Utilities/mk/meshViewer/Makefile
@@ -14,6 +14,7 @@ SRCS=\
    cfdImage.cpp \
    setScalarAndVector.cpp \
    viewCells.cpp \
+   cfdVTKFileHandler.cxx \
    readWriteVtkThings.cpp \
    cfdGrid2Surface.cpp 
 
