--- a/VE_Builder/Utilities/mk/whatIsScalarRange/Makefile
+++ b/VE_Builder/Utilities/mk/whatIsScalarRange/Makefile
@@ -10,6 +10,7 @@ srcdir=	../../
 SRCS=\
    fileIO.cxx \
    readWriteVtkThings.cxx \
+   cfdVTKFileHandler.cxx \
    cfdAccessoryFunctions.cxx \
    whatIsScalarRange.cpp 
 
