--- a/VE_Builder/Utilities/mk/removeVtkCellsOutsideBox/Makefile
+++ b/VE_Builder/Utilities/mk/removeVtkCellsOutsideBox/Makefile
@@ -11,6 +11,7 @@ srcdir= ../../
 SRCS=\
    fileIO.cxx \
    readWriteVtkThings.cxx \
+   cfdVTKFileHandler.cxx \
    cleanVtk.cpp \
    removeVtkCellsOutsideBox.cpp 
 
