changes to allow read/write of new and old vtk file format. . .

--- a/VE_Builder/Translator/Makefile
+++ b/VE_Builder/Translator/Makefile
@@ -21,6 +21,7 @@ SRCS=\
    viewCells.cpp \
    fireReader.cpp \
    readWriteVtkThings.cxx \
+   cfdVTKFileHandler.cxx \
    cleanVtk.cpp \
    cfdGrid2Surface.cpp \
    particle.cpp \
