some additions to compareScalars.cpp, from INL

--- a/VE_Builder/Utilities/mk/compareScalars/Makefile
+++ b/VE_Builder/Utilities/mk/compareScalars/Makefile
@@ -11,6 +11,7 @@ srcdir= ../../
 SRCS=\
    readWriteVtkThings.cxx \
    cfdVTKFileHandler.cxx \
+   fileIO.cxx \
    compareScalars.cpp
 
 # Specify the OS-dependent directory name for object files and depends
